# BigOS

./: elozelo
CMake/: CommonConfig.cmake  riscv64-cmake-toolchain.cmake
CMake/toolchains/: riscv64-common.cmake
docs/: begginers_guide.md  contributing_rules.md
include/debug/: debug_stdio.h
include/stdbigos/: buffer.h  error.h  math.h
src/bootstrap/: CMakeLists.txt  bootstrap_memory_services.c  bootstrap_memory_services.h  bootstrap_page_table.c  bootstrap_page_table.h  kbootstrap.c  kinit.s
src/kernel/: CMakeLists.txt  kernel_config.c  kernel_config.h  kinit.c  kinit.s  kmain.c  power.c  power.h  ram_map.c  ram_map.h
src/kernel/devtree/: devtree.h
src/kernel/devtree/devtreeblob/: devtreeblob.c  devtreeblob.h
src/kernel/logging/: klog.c  klog.h
src/kernel/memory_managment/: address_space_manager.c  address_space_manager.h  page_table.c  page_table.h  physical_memory_manager.c  physical_memory_manager.h  virtual_memory_managment.c  virtual_memory_managment.h
src/kernel/memory_managment/include/physical_memory/: manager.h
src/kernel/memory_managment/physical_memory/: manager.c
src/kernel/memory_manegment/: mm_types.h  page_table.c  page_table.h  virtual_memory_manager.c  virtual_memory_manager.h
src/kernel/virtual_memory/: pmm.c  pmm.h  vmm.c
src/lib/debug/: debug_stdio.c
src/lib/stdbigos/: buffer.c
